--- a/src/Styles/Login.scss
+++ b/src/Styles/Login.scss
@@ -25,16 +25,7 @@
 }
 
 .btn{
-    padding: 10px;
-    background: rgb(81,10,222);
-    background: -moz-linear-gradient(137deg, rgba(81,10,222,1) 0%, rgba(81,10,222,1) 41%, rgba(176,0,228,1) 100%);
-    background: -webkit-linear-gradient(137deg, rgba(81,10,222,1) 0%, rgba(81,10,222,1) 41%, rgba(176,0,228,1) 100%);
-    background: linear-gradient(137deg, rgba(81,10,222,1) 0%, rgba(81,10,222,1) 41%, rgba(176,0,228,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#510ade",endColorstr="#b000e4",GradientType=1);
-    border-style: none;
-    border-radius: 5px;
-    font-size: $bodyText;
-    cursor: pointer;
+    @include buttonStyle();
 
     &:hover{
         background: rgb(72, 2, 212);
@@ -50,22 +41,17 @@
     width: 100%;
     height: 100vh;
     background-size: cover;
-
     margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    @include flexCenter(column);
 }
 
 .container{
-    display: flex;
-    flex-direction: column;
     background-color: $whiteColor;
     padding: 2rem;
     height: auto;
     width: 30%;
     border-radius: 10px;
+    @include flexCenter(column);
 
     .form__wrapper{
         width: 100%;
