--- a/src/Styles/Table.css
+++ b/src/Styles/Table.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: #fff;
+    /* background-color: #fff; */
     padding: 2rem;
     height: auto;
     width: 100%;
